--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="356">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="526">
 
     
 
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">bootstrap theme</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="358">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="528">
 
     
 
@@ -98,7 +98,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="MUKs/teqUBFQGhaMpn8fDxgYGAh0c/I9rOM4FSDNEmxMVFfXhux1OpesGc0uMMh8eWQ0v3CfWqt6PB+RfWB0XJWaOJkLKv99jMWgkh1SdcS8nJ9jDd+bCKJj2HfRrFgT">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="H8+Sp7xich3lQ5G+aPGzkZA+QdH93W99mnAxoHC3cwZFxPjr+U/zRrAPcN4S+t40fZxooWISBr4lmMaGHV0eXfNrxXKE1Zw2LnzpARSfHtCScy0nVWwOnzfaKdHP1eUM">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
