--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="227">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="312">
 
     
 
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="229">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap buttons</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="314">
 
     
 
@@ -98,7 +98,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="04L0p0Q6W2nhwW2B70ueptYh7kyEZd82SprcotdRHC8X/PjuWR+WULf0XCZnvN2IWnbRnNv8cxlL6gamvKREiyr9ahklyx/6BW33biCpU5ydtUBZU9aNnxADe1plc4M/">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="JIV2DkNL4RcJAkx7HkvsefVQNrg88yJInqYOLYmfSJKAPKSxDlGfIyg8+LE4ztjiBnOOLoNw6H/rId1QYGy/FMh1GNg0+PmxUbMletXz/CvJinFs9qZ/Yd8fwaDHUDEM">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
