--- a/page1.html
+++ b/page1.html
@@ -24,11 +24,11 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="641">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="726">
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -41,7 +41,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://arthur365.github.io/GardenCityKebabHouse/">
-                         <img src="assets/images/logo-city-800x149.png" alt="Garden City Kebab House" title="Garden City Kebab House" media-simple="true" style="height: 3.8rem;">
+                         <img src="assets/images/mbr-3-1620x1080.jpg" alt="Garden City Kebab House" title="Garden City Kebab House" media-simple="true" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-success display-5" href="https://arthur365.github.io/GardenCityKebabHouse/" target="_blank"></a></span>
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="643">
+<section class="engine"><a href="https://mobirise.co/m">bootstrap table</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="728">
 
     
 
@@ -98,7 +98,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="QGN5EmN9EFc8YGyDT570SrQmqV9B83ZuNm3HaHV3LCwGVJ34GALg/CSXXyOU3f/jMm26woNUrxF8aUsz3CuQaMhCXTYH7WBFi4pX82xxoHqlocBDaUhV9x/JRxFTBAln">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="B0XAJAN63pb4N5pdUz/UMQ9BLsgaF9FObMn2kaJsZ3k+eVtFYuRlhHIaa8v2qw3ntLNQewS9C4LcuG7YW/ZL04T7c9LQaTGB/VPBnxGmxxXjFa2gWmtgRZ1gEwnuDlDN">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
