--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="377">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="126">
 
     
 
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="379">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="128">
 
     
 
@@ -93,7 +93,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="tDbv4/03zY2pudRjp+a4dG9F5m5prTlUUGIeQwUYIo+whNT4d/eE3dBiBlaq7O1DDpc8B78E8HHG1kgjyYy+mVr8hxU0DWLa/8nQHLEDBZoJ21rwT3i6HYv7bcP2CDQ9">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="zF3VZlzyMEB9VqDVDhzRV/kNcKN5TJcoIzoxnkvW+JFUgh/+EyeCcJxAwpTP9z+xYjKqtBCnRpfpZq3RUCRm/b5NLCPf98npnGpS/7z3rt3GS6ymYRdiYv+M/4VKCMIW">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
