--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1549">
+<section class="menu cid-qF6aTJFpfw" once="menu" id="menu1-6" data-rv-view="1632">
 
     
 
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">website creator</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1551">
+<section class="engine"><a href="https://mobirise.co/n">bootstrap modal form</a></section><section class="mbr-section form4 cid-qF6tFgYoIm" id="form4-7" data-rv-view="1634">
 
     
 
@@ -94,7 +94,7 @@
                 </div>
                 <div data-form-type="formoid">
                     <div data-form-alert="" hidden="">Thanks for filling out the form!</div>
-                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="cUA3H0mGuTW8kga8X7cKiwoa+YekcdBg3PbhGZzSdxIMaT/gOFTHSYcLFtJbK0Jm6kXhSZ8RNbWC8b7k45J/tfCbEmfJThcA+lAuYeF4ZVNecCtv64TQ55yfkm5TNpy6">
+                    <form class="block mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" data-form-email="true" value="TK/rZVdwDmDB0/aHA7T/TvWsfxkGsHm08vVyO8uKadxQxGd1OrF+JXnOnKVErAc599jvwfzp8YB7QPClRoHoSdxbS9aEKAQTr/4uF64ZAH9t86EF1InkJyHzyfRsgwNi">
                         <div class="row">
                             <div class="col-md-6 multi-horizontal" data-for="name">
                                 <input type="text" class="form-control input" name="name" data-form-field="Name" placeholder="Your Name" required="" id="name-form4-7">
